# Veil

./: LICENSE  README.md  check.bat  main.py  pyproject.toml  setup.py
app_tools/auth/: auth_tools.py  user_session.py
app_tools/db/: __init__.py  db.py  models.py  paths.py
app_tools/encryption/: xor_tools.pyx
