[project]
name = "file-hider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cython>=3.2.5",
    "nuitka>=4.1.1",
    "peewee>=4.0.6",
    "pillow>=12.2.0",
    "platformdirs>=4.9.6",
    "pyside6>=6.11.1",
    "python-vlc>=3.0.21203",
    "setuptools>=82.0.1",
    "werkzeug>=3.1.8",
]
